# tdameritrade-market-data

./: .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_publish_datalake_tdameritrade.yml
tdameritrade-market-data/: batch_get_missing_days.sh  td_get_price_history.py
tdameritrade-market-data/config/: td-schema.json
