[tool.poetry]
name = "tdameritrade-market-data"
version = "0.1.0"
description = "Get daily price history from TD Aade for further technical analysis"
authors = ["hn-antoine <91835230+hn-antoine@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
colorlog = "^6.4.1"
requests = "^2.26.0"
python-dateutil = "^2.8.2"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
